# Veilsoft-Networking-Protocol

./: .gitignore  CMakeLists.txt  README.md  tcp_server  tcp_server.cpp
.github/workflows/: ci.yml
VeilsoftNetworkingProtocol/Assets/: TCPClient.cs
VeilsoftNetworkingProtocol/Assets/Scenes/: SampleScene.unity
VeilsoftNetworkingProtocol/UserSettings/Layouts/: default-6000.dwlt
include/: tcp_server.h
src/: main.cpp  tcp_server.cpp
test/: test_tcp_server.cpp
